--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -13,27 +13,31 @@
 <link rel="stylesheet" href="/css/lib/swiper.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/search.css" />
-<link th:if="${user.theme == 1}" rel="stylesheet" href="/css/alovoa-dark.css" />
+<link th:if="${user.theme == 1}" rel="stylesheet"
+	href="/css/alovoa-dark.css" />
 <title th:text="#{search.title}"></title>
 </head>
 <body>
 	<div id="main-logged-in">
 		<header th:insert="fragments.html::header-logged-in"></header>
 		<div class="section" id="filter-div">
-			<div class="container is-small" style="display: flex">
-				<div style="flex-grow: 1">
-					<label class="label" th:text="#{search.max-distance}"></label>
-					<div class="slider-container"
-						style="padding-top: 8px; padding-bottom: 8px;">
-						<input class="slider is-info" step="1" min="1" max="100"
-							value="20" type="range" id="max-distance-slider">
-						<p id="max-distance-display">20</p>
-						<div style="padding-left: 4px"></div>
-						<span th:text="#{km}"></span>
+			<div class="container is-small">
+				<div style="display: flex">
+					<div style="flex-grow: 1">
+						<label class="label" th:text="#{search.max-distance}"></label>
+						<div class="slider-container"
+							style="padding-top: 8px; padding-bottom: 8px;">
+							<input class="slider is-info" step="1" min="1" max="100"
+								value="20" type="range" id="max-distance-slider">
+							<p id="max-distance-display">20</p>
+							<div style="padding-left: 4px"></div>
+							<span th:text="#{km}"></span>
+						</div>
 					</div>
+					<div id="distance-spacing" style="padding-left: 24px;"></div>
 				</div>
-				<div id="distance-spacing" style="padding-left: 24px;"></div>
-				<div style="display: flex;">
+				<div id="search-right"
+					style="display: flex; min-width: 230px; max-width: 300px; margin-bottom: 12px;">
 					<div style="flex: 1;">
 						<label class="label" th:text="#{sort}"></label>
 						<div class="select">
@@ -47,14 +51,16 @@
 					</div>
 					<div id="sort-search-spacing" style="padding-left: 24px;"></div>
 					<div>
-	
+
 						<label class="label" th:text="#{search}"></label>
-						<button class="button colored is-info" onclick="search()" style="width: 40px;">
+						<button class="button colored is-info" onclick="search()"
+							style="width: 40px;">
 							<i class="fa fa-search"></i>
 						</button>
 					</div>
 				</div>
 			</div>
+
 		</div>
 
 		<section class="container" id="main-container"></section>
