--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -244,10 +244,21 @@
 	<div th:fragment="message-detail">
 		<div th:each="message : ${messages}"
 			style="display: inline-block; width: 100%;">
-			<div th:if="${message.from}" class="message left"
-				th:utext="${message.content}" style="word-break: break-all;"></div>
-			<div th:unless="${message.from}" class="message right"
-				th:utext="${message.content}" style="word-break: break-all;"></div>
+
+			<div th:if="${message.from && message.allowedFormatting}"
+				class="message left" th:utext="${message.content}"
+				style="word-break: break-all;"></div>
+			<div th:if="${message.from && !message.allowedFormatting}"
+				class="message left" th:text="${message.content}"
+				style="word-break: break-all;"></div>
+
+			<div th:if="${!message.from  && message.allowedFormatting}"
+				class="message right" th:utext="${message.content}"
+				style="word-break: break-all;"></div>
+			<div th:if="${!message.from  && !message.allowedFormatting}"
+				class="message right" th:text="${message.content}"
+				style="word-break: break-all;"></div>
+
 		</div>
 	</div>
 
