--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -36,7 +36,7 @@
 							<div class="full-width profile-bottom">
 								<div style="font-size: 1.5em" th:text="${convo.userName}"></div>
 								<span style="font-size: 0.8em; overflow-wrap: normal; background-color: initial;" class="message"
-									th:utext="${convo.lastMessage}"
+									th:text="${convo.lastMessage}"
 									th:if="${convo.lastMessage != null}"></span> <span
 									style="font-size: 0.8em; overflow-wrap: normal;"
 									th:unless="${convo.lastMessage != null}"
