Added even more tests and improve source code

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -79,15 +79,15 @@
 							<select id="locale" onchange="onChangeLocal(this)">
 								<option th:text="#{language}" hidden></option>
 								<option value="?lang=en">English</option>
-								<option value="?lang=es">Español</option>
-								<option value="?lang=fr">Français</option>
 								<option value="?lang=de">Deutsch</option>
-								<option value="?lang=pt">Português</option>
-								<option value="?lang=it">Italiano</option>
-								<option value="?lang=ru">русский</option>
-								<option value="?lang=ja">日本語</option>
-								<option value="?lang=zh">中文</option>
-								<option value="?lang=ko">한국어</option>
+								<option value="?lang=es">Español (beta)</option>
+								<option value="?lang=fr">Français (beta)</option>
+								<option value="?lang=pt">Português (beta)</option>
+								<option value="?lang=it">Italiano (beta)</option>
+								<option value="?lang=ru">русский (beta)</option>
+								<option value="?lang=ja">日本語 (beta)</option>
+								<option value="?lang=zh">中文 (beta)</option>
+								<option value="?lang=ko">한국어 (beta)</option>
 							</select>
 						</div>
 						<span class="icon is-left"> <i class="fas fa-globe"></i>
