--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -18,7 +18,7 @@
 		<header th:insert="fragments.html::header"></header>
 		<div class="section">
 			<div class="container">
-				<a href="https://ko-fi.com/alovoa" class="button is-primary" style="width: 100%; margin-bottom: 32px;"><i
+				<a href="https://ko-fi.com/alovoa" class="button is-primary" style="width: 100%; margin-bottom: 32px; border-color: #dbdbdb;"><i
 					class="fa fa-coins"></i><span th:text="#{kofi}" style="padding-left: 4px;"></span></a>
 				<div class="notification is-success" th:text="#{donate.notice-1}" style="margin-bottom: 4px;"></div>
 				<div class="notification is-success" th:text="#{donate.notice-2}"></div>
