--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -134,7 +134,7 @@
 		</section>
 		<section class="container cards" style="margin-top: 1.5em">
 			<div class="card">
-			<div class="button" th:utext="#{index.sign-up-now}" style="width: 100%;"></div>
+			<a class="button" th:utext="#{index.sign-up-now}" style="width: 100%;" href="/register"></a>
 			</div>
 		</section>
 
