--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -130,17 +130,17 @@
 				<div class="container" style="margin-bottom: 48px;" id="oauth-div">
 					<div class="box">
 						<div class="columns">
-							<button class="button is-large colored"
-								style="background-color: #4285F4; width: 100%;"
+							<button class="button colored"
+								style="background-color: #4285F4; width: 100%; margin-right: 4px;margin-bottom: 4px;"
 								onclick="window.location='/oauth2/authorization/google'">
-								<img src="/img/google-icon.svg" style="height: 48px;"><span
+								<img src="/img/google-icon.svg" style="height: 32px;"><span
 									style="padding-left: 12px; color: white;"
 									th:text="#{register.oauth.google}"></span>
 							</button>
-							<button class="button is-large colored"
+							<button class="button colored"
 								style="background-color: #4267b2; width: 100%;"
 								onclick="window.location='/oauth2/authorization/facebook'">
-								<img src="/img/facebook-icon.svg" style="height: 42px;"><span
+								<img src="/img/facebook-icon.svg" style="height: 32px;"><span
 									style="padding-left: 12px; color: white;"
 									th:text="#{register.oauth.facebook}"></span>
 							</button>
