--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -39,7 +39,7 @@
 							<label class="label" th:text="#{dob}" style="float: left;"></label><span
 								class="asterisk">*</span>
 							<div class="control">
-								<input type="date" name="dateOfBirth" required>
+								<input type="date" name="dateOfBirth" style="width: 100%;" required>
 							</div>
 						</div>
 
