Updated to Bulma 0.9.2

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -171,7 +171,7 @@ input[type=range].slider {
 }
 
 .datepicker-year span, .datepicker-month, .date-item {
-	color: black !important;
+	color: #4a4a4a !important;
 }
 
 @media screen and (max-width: 700px) {
