--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -155,16 +155,14 @@
 		</nav>
 	</div>
 
-	<div th:fragment="search-users">
+	<div th:fragment="search-users" class="user-search-div" >
 
 		<div th:if="${#lists.isEmpty(users)}"
 			style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; padding-top: 12px;">
 			<span th:text="#{no-users-found}"></span>
 		</div>
 
-
-
-		<div th:each="user : ${users}">
+		<div th:each="user : ${users}" class="user-search-card" style="scroll-snap-align: start;">
 			<div class="swiper-container" th:id="${user.idEncoded}">
 				<div class="swiper-wrapper">
 
