Added translation for donation popup

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -74,10 +74,7 @@
 						<div class="media-content">
 							<div>
 									<strong th:text="#{donate.donate-now}"></strong> <br> 
-									<span>The
-									content for the modal comes here. You may use text, images,
-									buttons etc. here.
-									</span>
+									<span th:text="#{search.donation.popup}"></span>
 								<div style="padding-top: 12px;"></div>
 								<button class="button right is-danger colored"
 									th:text="#{cancel}"
